use Number.valueOf() rather than new Number()
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@1044443 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 983f1108ce3c8207e6b2b2d0ea1569101b6ac59a